# APK-Analysis-CLI

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apk_analyzer/application/: metadata_service.py
apk_analyzer/cli/: main.py
apk_analyzer/domain/: __init__.py  errors.py  models.py
apk_analyzer/infrastructure/: androguard_parser.py
apk_analyzer/interfaces/: apk_parser.py
scripts/: run.ps1
specs/1-apk-metadata-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-apk-metadata-cli/checklists/: requirements.md
specs/1-apk-metadata-cli/contracts/: cli-output-schema.md
tests/unit/: test_metadata_service.py
